# forward-forward-rs

./: Cargo.toml  README.md
src/: lib.rs  mat.rs
