[package]
name = "engram"
version = "0.1.0"
edition = "2024"

[dependencies]
mersenne-twister-rs = {git = "https://github.com/jesper-olsen/mersenne-twister-rs"}
mnist = { git = "https://github.com/jesper-olsen/mnist-rs.git" }
rayon = "1.11.0"
rand = { version = "0.9.2", features = ["small_rng"] }
rand_distr = "0.5.1"
clap = { version = "4.5.53", features = ["derive"] }

[features]
#default = []     
#plotting = ["gnuplot"]    

